--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -77,6 +77,7 @@
       8. Here in the object we can see the keyword 'key', so if we print event.key this will print the key that we press in console.
       9. Press 'Enter' key and see, the "Enter" shows in the console.
       10. Now check with if statement, if event.key equal to 'Enter' then do the same calculation that the calcualte button does.
+      11. The last thing to clean up the codes by move the onkeydown code into a new function(Create a function inside script). And call the function inside onkeydown attribute
     -->
 
     <p>YouTube Subscribe Button</p>
@@ -107,12 +108,13 @@
       placeholder="Cost of Order"
       class="js-cost-input"
       onkeydown="
-      // console.log('Typing');
-      // console.log(event.key);
-      if (event.key) {
-        calculateTotal();
-      }
-    "
+    // console.log('Typing');
+    // console.log(event.key);
+    if (event.key) {
+      calculateTotal();
+    }
+    // handleCostKeyDown();
+  "
     />
     <button
       onclick="
@@ -124,6 +126,12 @@
     <p class="js-total-cost"></p>
 
     <script>
+      // Define a function to manage the onkeydown feature
+      // function handleCostKeyDown() {
+      //   if (event.key) {
+      //     calculateTotal();
+      //   }
+      // }
       function calculateTotal() {
         const inputElement = document.querySelector(".js-cost-input");
         // Since reassign the variable in if statement so need to change the variable const to let
