--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -149,7 +149,7 @@
       }
       function calculateTotal() {
         const inputElement = document.querySelector(".js-cost-input");
-        // Since reassign the variable in if statement so need to change the variable const to let
+        // Since reassign the variable in if statement so need to change the variable const to let.
         // const cost = inputElement.value;
         let cost = Number(inputElement.value); // Need to convert the string to number.
 
