--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -169,7 +169,7 @@
         // Instead of innerHTML we can use innerText property to get exact text of the html element. Because the text for the button might have empty space.
         // if (buttonElement.innerHTML === 'Subscribe')
         if (buttonElement.innerText === "Subscribe") {
-          // If true, change to Subscribed using innerHTML
+          // If true, change to Subscribed using innerHTML.
           buttonElement.innerHTML = "Subscribed";
         } else {
           // And else back to the original text
