--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -165,7 +165,7 @@
         // Now we have the button inside JavaScrip
         const buttonElement = document.querySelector(".js-subscribe-button");
 
-        // Check the button text is 'Subscribe'
+        // Check the button text is 'Subscribe'.
         // Instead of innerHTML we can use innerText property to get exact text of the html element. Because the text for the button might have empty space.
         // if (buttonElement.innerHTML === 'Subscribe')
         if (buttonElement.innerText === "Subscribe") {
