--- a/04-calculator.html
+++ b/04-calculator.html
@@ -10,7 +10,7 @@
       <button
         onclick="
           calculation += '1';
-          console.log(calculation);
+          console.log(Calculation);
         "
       >
         1
