--- a/09-rock-paper-scissors.html
+++ b/09-rock-paper-scissors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rock Paper Scissor</title>
+    <title>Rock Paper Scissors</title>
   </head>
   <body>
     <p>Rock Paper Scissors</p>
