--- a/09-rock-paper-scissors.html
+++ b/09-rock-paper-scissors.html
@@ -4,7 +4,7 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <p>Rock Paper Scissor</p>
+    <p>Rock Paper Scissors</p>
     <button
       onclick="
         playGame('rock');
